--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl:               ''
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Yu Bin, Kim
+title:                 yu bin, kim
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -39,22 +39,24 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/icons/icon.png
+logo:                  /assets/icons/ybk_logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                Yu Bin Kim
+  email:               ybkim95@yonsei.ac.kr
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
+  - title:             HOME
     url:               /example/
-  - title:             Documentation
+  - title:             RESEARCH
+    url:               /example/
+  - title:             DOCUMNET
     url:               https://hydejack.com/docs/
-  - title:             About
+  - title:             ABOUT
     url:               /about/
 
 # Add links to the footer.
@@ -66,7 +68,7 @@ menu:
 #     url:               /cookies-policy/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2019. All rights reserved. Open `_config.yml` to edit this text.
+copyright:             © 2020. All rights reserved. Open `_config.yml` to edit this text.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
@@ -80,7 +82,7 @@ paginate_path:         /page-:num/
 # ========================================================================================
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
+accent_image:          /assets/img/jibo.jpg
 accent_color:          rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
