--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 lang: en
 
 # 메인 화면 및 페이지 상단 제목
-title: yu bin, kim
+title: yu bin, kim 1111
 sub_title: Yonsei Univ (ME/CS)
 
 # web의 주소 설정
 url: "https://ybkim95.github.io"
-baseurl: "" 
+baseurl: ""
 
 # 메인 화면 및 sidebar 문구
 tagline:               >
