--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # 언어 설정
 lang: en
 
-# 메인 화면 및 페이지 상단 제목
-title: yu bin, kim 1111
+# 메인 시작 화면 및 페이지 상단 제목
+title: yu bin, kim
 sub_title: Yonsei Univ (ME/CS)
 
 # web의 주소 설정
